fix: overflow bag

--- a/assets/styles/base/_core.scss
+++ b/assets/styles/base/_core.scss
@@ -8,6 +8,7 @@ html,
 body {
     font-family: sans-serif;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 #root {
